--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,13 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/purple_500</item>
     </style>
+
+    <style name="Theme.TP2INF8405.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.TP2INF8405.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.TP2INF8405.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
