--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:screenOrientation="landscape"
+    android:background="@color/white"
     >
 
     <fragment
@@ -30,8 +32,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:layout_width="114dp"
-        android:layout_height="51dp"
+        android:id="@+id/btn"
+        android:layout_width="92dp"
+        android:layout_height="41dp"
         android:layout_marginStart="59dp"
         android:layout_marginLeft="59dp"
         android:layout_marginEnd="32dp"
