--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -28,7 +28,7 @@
         android:layout_marginLeft="72dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
-        android:text="caca"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
