--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -32,13 +32,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:headerDividersEnabled="true"
+            tools:visibility="visible" />
+<!--
         <TextView
             android:id="@+id/textView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
             android:text="" />
+        -->
     </ScrollView>
+
+
 
     <Button
         android:id="@+id/btn"
