--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -27,18 +27,17 @@
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.996"
         app:layout_constraintStart_toEndOf="@+id/mapView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ListView
             android:id="@+id/listView"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:headerDividersEnabled="true"
             tools:visibility="visible" />
-<!--
+        <!--
         <TextView
             android:id="@+id/textView"
             android:layout_width="fill_parent"
@@ -47,8 +46,6 @@
             android:text="" />
         -->
     </ScrollView>
-
-
 
     <Button
         android:id="@+id/btn"
