--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -8,11 +8,11 @@
     android:background="#FFFFFF">
 
     <ScrollView
-        android:layout_width="381dp"
-        android:layout_height="599dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:fillViewport="true"
+        android:fillViewport="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
