--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -8,16 +8,27 @@
     android:background="@color/white"
     android:screenOrientation="landscape">
 
+
     <fragment
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="527dp"
         android:layout_height="409dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:context=".MapsActivity" />
 
+    <Button
+        android:id="@+id/profileBtn"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:background="#cc99ff"
+        android:text="@string/profileBtn"
+        app:layout_constraintStart_toStartOf="@+id/mapView"
+        app:layout_constraintTop_toTopOf="@+id/mapView" />
 
     <ScrollView
         android:id="@+id/SCROLLER_ID"
@@ -55,11 +66,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:background="#cc99ff"
-        android:text="Swap Theme"
+        android:text="@string/swapThemeBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    ... />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
