--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -12,10 +12,8 @@
     <fragment
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="527dp"
-        android:layout_height="409dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
+        android:layout_width="476dp"
+        android:layout_height="382dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,13 +31,15 @@
 
     <ScrollView
         android:id="@+id/SCROLLER_ID"
-        android:layout_width="197dp"
+        android:layout_width="160dp"
         android:layout_height="353dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:fillViewport="true"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/mapView"
         app:layout_constraintTop_toTopOf="parent">
 
