--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -8,34 +8,32 @@
     android:background="#FFFFFF">
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:fillViewport="false"
+        android:layout_width="227dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:fillViewport="true"
+        android:isScrollContainer="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <ListView
             android:id="@+id/popup_listView"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:fastScrollAlwaysVisible="false"
-            android:fastScrollEnabled="false"
+            android:layout_height="wrap_content"
             android:headerDividersEnabled="true"
-            android:isScrollContainer="true"
+            android:isScrollContainer="false"
             android:scrollbarAlwaysDrawHorizontalTrack="false"
             android:scrollbarAlwaysDrawVerticalTrack="false"
-            android:visibility="visible" />
+            tools:visibility="visible" />
     </ScrollView>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="22dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Found devices information"
+        android:text="@string/foundDevicesInfo"
         android:textColor="#0E0808"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
