--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -29,6 +29,13 @@
         app:layout_constraintStart_toStartOf="@+id/mapView"
         app:layout_constraintTop_toTopOf="@+id/mapView" />
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="476dp"
+        tools:layout_editor_absoluteY="29dp" />
+
     <ScrollView
         android:id="@+id/SCROLLER_ID"
         android:layout_width="160dp"
@@ -48,7 +55,9 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:headerDividersEnabled="true"
-            tools:visibility="visible" />
+            tools:visibility="visible" >
+
+        </ListView>
         <!--
         <TextView
             android:id="@+id/textView"
