--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -21,11 +21,11 @@
 
     <Button
         android:id="@+id/profileBtn"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="60dp"
         android:background="#cc99ff"
-        android:text="@string/profileBtn"
+        android:text="@string/Parameters"
         app:layout_constraintStart_toStartOf="@+id/mapView"
         app:layout_constraintTop_toTopOf="@+id/mapView" />
 
@@ -112,16 +112,7 @@
         app:layout_constraintTop_toTopOf="@+id/mapView"
         tools:visibility="visible" />
 
-    <Button
-        android:id="@+id/Language"
-        android:layout_width="75dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="60dp"
-        android:text="@string/LanguageSelect"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
