--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -25,7 +25,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="60dp"
         android:background="#cc99ff"
-        android:text="@string/Parameters"
+        android:text="@string/Profile"
         app:layout_constraintStart_toStartOf="@+id/mapView"
         app:layout_constraintTop_toTopOf="@+id/mapView" />
 
