--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -21,8 +21,10 @@
 
     <Button
         android:id="@+id/profileBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="97dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="60dp"
         android:background="#cc99ff"
         android:text="@string/Profile"
@@ -63,8 +65,8 @@
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="172dp"
-        android:layout_height="46dp"
+        android:layout_width="225dp"
+        android:layout_height="41dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
@@ -81,6 +83,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:text="@string/batteryLevel"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mapView"
@@ -94,6 +97,7 @@
         android:layout_marginLeft="144dp"
         android:layout_marginTop="20dp"
         android:text="@string/UplinkVal"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mapView"
@@ -107,6 +111,7 @@
         android:layout_marginLeft="288dp"
         android:layout_marginTop="20dp"
         android:text="@string/DownlinkVal"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mapView"
@@ -116,49 +121,54 @@
         android:id="@+id/lightVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="36dp"
         android:text="@string/lightVal"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="@+id/mapView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/z_acc" />
 
     <TextView
         android:id="@+id/x_acc"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="208dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
         android:text="@string/x_acc"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="@+id/mapView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileBtn" />
 
     <TextView
         android:id="@+id/y_acc"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:text="@string/y_acc"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="@+id/mapView" />
+        app:layout_constraintBottom_toTopOf="@+id/z_acc"
+        app:layout_constraintStart_toStartOf="@+id/mapView"
+        app:layout_constraintTop_toBottomOf="@+id/x_acc"
+        app:layout_constraintVertical_bias="0.488" />
 
     <TextView
         android:id="@+id/z_acc"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="76dp"
         android:text="@string/z_acc"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="@+id/mapView" />
+        app:layout_constraintBottom_toTopOf="@+id/btn"
+        app:layout_constraintStart_toStartOf="@+id/mapView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
